# Set source files
set(WWLIB_SRC
    _convert.cpp
    b64pipe.cpp
    b64straw.cpp
    base64.cpp
    blit.cpp
    blowfish.cpp
    buff.cpp
    bufffile.cpp
    chunkio.cpp
    convert.cpp
    cpudetect.cpp
    crc.cpp
    cstraw.cpp
    data.cpp
    ffactory.cpp
    gcd_lcm.cpp
    hash.cpp
    hsv.cpp
    ini.cpp
    int.cpp
    jshell.cpp
    LaunchWeb.cpp
    lcw.cpp
    load.cpp
    mpmath.cpp
    multilist.cpp
    mutex.cpp
    nstrdup.cpp
    palette.cpp
    pcx.cpp
    pipe.cpp
    pk.cpp
    ramfile.cpp
    random.cpp
    rawfile.cpp
    rc4.cpp
    readline.cpp
    realcrc.cpp
    refcount.cpp
    rgb.cpp
    rle.cpp
    rndstrng.cpp
    sampler.cpp
    sha.cpp
    slnode.cpp
    srandom.cpp
    stimer.cpp
    straw.cpp
    strtok_r.cpp
    systimer.cpp
    tagblock.cpp
    TARGA.CPP
    textfile.cpp
    thread.cpp
    trim.cpp
    vector.cpp
    widestring.cpp
    wwfile.cpp
    wwfont.cpp
    wwstring.cpp
    xpipe.cpp
    xstraw.cpp
    xsurface.cpp
    always.h
    argv.h
    b64pipe.h
    b64straw.h
    base64.h
    binheap.h
    bittype.h
    blit.h
    blitter.h
    bool.h
    borlandc.h
    bound.h
    BSEARCH.H
    bsurface.h
    BUFF.H
    bufffile.h
    CallbackHook.h
    chunkio.h
    Convert.h
    cpudetect.h
    CRC.H
    cstraw.h
    data.h
    ffactory.h
    FONT.H
    gcd_lcm.h
    hash.h
    hashcalc.h
    HASHLIST.H
    hashtemplate.h
    IFF.H
    INDEX.H
    INI.H
    inisup.h
    INT.H
    iostruct.h
    LaunchWeb.h
    LCW.H
    LISTNODE.H
    mempool.h
    mixfile.h
    MONODRVR.H
    MPMATH.H
    multilist.h
    mutex.h
    Notify.h
    nstrdup.h
    ntree.h
    PALETTE.H
    pcx.H
    PIPE.H
    PK.H
    Point.h
    RAMFILE.H
    RANDOM.H
    RAWFILE.H
    rc4.h
    readline.h
    realcrc.h
    ref_ptr.h
    refcount.h
    RGB.H
    RLE.H
    RNDSTRAW.H
    rndstrng.h
    rng.h
    rsacrypt.h
    sampler.h
    sha.h
    shapeset.h
    sharebuf.h
    Signaler.h
    simplevec.h
    SLIST.H
    SLNODE.H
    srandom.h
    stl.h
    STRAW.H
    strtok_r.h
    Surface.h
    surfrect.h
    systimer.h
    TagBlock.h
    TARGA.H
    textfile.h
    thread.h
    timer.h
    trackwin.h
    trect.h
    trim.h
    uarray.h
    Vector.H
    verchk.h
    visualc.h
    WATCOM.H
    widestring.h
    WWFILE.H
    wwstring.h
    xmouse.h
    XPIPE.H
    XSTRAW.H
    xsurface.h
)

if(WIN32)
    list(APPEND WWLIB_SRC
        ddraw.cpp
        dsurface.cpp
        dsurface.h
        keyboard.cpp
        keyboard.h
        mono.cpp
        _mono.cpp
        _mono.h
        mpu.cpp
        MPU.H
        msgloop.cpp
        msgloop.h
        rcfile.cpp
        rcfile.h
        registry.cpp
        registry.h
        WWCOMUtil.cpp
        WWCOMUtil.h
        win.cpp
        win.h
    )
endif()

# Targets to build.
add_library(g_wwlib STATIC)
set_target_properties(g_wwlib PROPERTIES OUTPUT_NAME wwlib)

target_sources(g_wwlib PRIVATE ${WWLIB_SRC})

target_link_libraries(g_wwlib PRIVATE
    g_wwcommon
)
